AMPSDEV-166: Replace Shitty plugin with Invoker + remove atlassian-plugin-sdk