@@ -172,71 +172,6 @@
                     <version>2.2</version>
                 </plugin>
                 <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-invoker-plugin</artifactId>
-                    <version>2.0.0</version>
-                    <configuration>
-                        <projectsDirectory>target/it</projectsDirectory>
-                        <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
-                        <settingsFile>target/it/settings.xml</settingsFile>
-                        <!--Run on Bamboo-->
-                        <!--<localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>-->
-                        <!-- Do not need to resolve all dedepencies each time run IT in DEV MODE-->
-                        <localRepositoryPath>${user.home}/local-repo</localRepositoryPath>
-                        <debug>true</debug>
-                        <postBuildHookScript>validate</postBuildHookScript>
-                        <preBuildHookScript>setup</preBuildHookScript>
-                        <addTestClassPath>true</addTestClassPath>
-                    </configuration>
-                    <executions>
-                        <execution>
-                            <id>integration-test</id>
-                            <goals>
-                                <goal>install</goal>
-                                <goal>run</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                </plugin>
-                <plugin>
-                    <groupId>org.codehaus.mojo</groupId>
-                    <artifactId>shitty-maven-plugin</artifactId>
-                    <version>1.0-alpha-3-atlassian-7</version>
-                    <executions>
-                        <execution>
-                            <goals>
-                                <goal>clean</goal>
-                                <goal>install</goal>
-                                <goal>test</goal>
-                            </goals>
-                        </execution>
-                        <execution>
-                            <id>clean-after-tests</id>
-                            <phase>post-integration-test</phase>
-                            <goals>
-                                <goal>clean</goal>
-                            </goals>
-                        </execution>
-                    </executions>
-                    <configuration>
-                        <offline>false</offline>
-                        <jvmArgs>-Xmx512m -XX:MaxPermSize=256m</jvmArgs>
-                        <projects>
-                            <fileset>
-                                <directory>${project.build.directory}/it</directory>
-                                <includes>
-                                    <include>*/pom.xml</include>
-                                </includes>
-                            </fileset>
-                        </projects>
-                        <filesets>
-                            <fileset>
-                                <directory>${project.build.directory}/it</directory>
-                            </fileset>
-                        </filesets>
-                    </configuration>
-                </plugin>
-                <plugin>
                     <groupId>com.atlassian.maven.plugins</groupId>
                     <artifactId>maven-repository-bundle-plugin</artifactId>
                     <version>0.1</version>
@@ -446,9 +381,8 @@
         <jtds.version>1.2.4</jtds.version>
         <release.profiles>release,installer-win,installer-linux,installer-osx</release.profiles>
         <release.arguments>-Pinstaller-win,installer-osx,installer-linux</release.arguments>
-        <shitty.artifactId>maven-${shitty.product}-plugin</shitty.artifactId>
-        <shitty.groupId>com.atlassian.maven.plugins</shitty.groupId>
-        <shitty.product>amps</shitty.product>
-        <invoker.test>!cliTest,!*GroupTest,*Test</invoker.test>
+        <invoker.artifactId>maven-${invoker.product}-plugin</invoker.artifactId>
+        <invoker.groupId>com.atlassian.maven.plugins</invoker.groupId>
+        <invoker.product>amps</invoker.product>
     </properties>
 </project>
